--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=userms
 spring.datasource.url=jdbc:oracle:thin:@ffgp750vpbgs58rv_tp?TNS_ADMIN=C:/Wallet_FFGP750VPBGS58RV
-spring.datasource.username=ADMIN
-spring.datasource.password=P4ssw0rd.2134
+spring.datasource.username=<usr>
+spring.datasource.password=<pwd>
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
 spring.jpa.hibernate.ddl-auto=create-drop
