--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
-			<version>3.4.4</version>
 		</dependency>
 
 		<dependency>
@@ -83,6 +82,10 @@
         	<artifactId>osdt_core</artifactId>
         	<version>21.5.0.0</version>
         	<scope>runtime</scope>
+    	</dependency>
+		<dependency>
+        	<groupId>org.springframework.boot</groupId>
+        	<artifactId>spring-boot-starter-security</artifactId>
     	</dependency>
 	</dependencies>
 
