--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=<usr>
 spring.datasource.password=<pwd>
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 
