--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,7 @@ spring.datasource.hikari.maximum-pool-size= 10
 spring.datasource.hikari.connection-timeout= 30000
 spring.datasource.hikari.max-lifetime=1800000
 spring.datasource.hikari.leak-detection-threshold=10000
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
